# raspberrypi

./: .gitignore  README.md  bluetooth-serial.md  bridge-second-lan.md  c64.md  ceph.md  create-floppy-image.md  create-raid1.md  docker.md  gitea.md  headless-wlan-client.md  install_pihole.sh  java-process-info.md  k3s-argocd.md  k3s-cluster.md  mariadb-in-docker.md  minio.md  openwrt.md  pi-hole.md  portainer.md  pyproject.toml  secure-uv.md  timing-server.md  tl-wn725n.md  tl-wn823n.md  tmux.md  tor-hidden-service.md  usb-lan-adapter.md  usb_bridge_trim_support.md  vice-c64.md  windows-pdf-printer.md  windows-share.md  wlan-access-point.md  xfce4.md
arduino/: boards-manager-urls.md  useful-libs.md
ca/: create.sh  readme.md
caweb/: Dockerfile  README.md  create.sh  main.py  pyproject.toml  requirements.txt  run.sh
chat/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
chromebook/: Crostini-LLM.md
chrony/: chrony.md  stats.sh
firecracker/: addserver.sh  firecracker.md  firecracker.sh  removeserver.sh
gitea/: docker-compose.yml  gitea.md
hadoop/: log-analyze.py
intel_arc_pro_b60/: drivers.sh  intel-arc.md  neo.sh  nvtop.sh  steam.sh
jobber/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
k3s-tools/: README.md  add-san.py  pyproject.toml
keep-export/: README.md  convert_keep.py  convert_keep_hedgedoc.py  pyproject.toml  server.py  upload_to_hedgedoc.py
keep-export/static/: script.js  style.css
keep-export/templates/: index.html
kubecontext/: README.md  main.py  pyproject.toml
mcp-a2a/: a2a-agentcard.md  (+1 more)
(+76 files in other folders)
